<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#F3E5F5"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#311B92"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/login_hint_email"
        android:textColor="#000000"
        android:background="@android:drawable/edit_text"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/login_hint_password"
        android:textColor="#000000"
        android:background="@android:drawable/edit_text"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginBottom="18dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/login_btn"
        android:backgroundTint="#311B92"
        android:textColor="@android:color/white"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/tvGoSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_go_signup"
        android:textColor="#311B92"
        android:textSize="16sp"/>

    <!-- NAYA FORGOT PASSWORD TEXTVIEW ADD KIYA HAI -->
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="#311B92"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:padding="8dp"/>

</LinearLayout>