<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#F5F5F5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#311B92"
        android:layout_marginBottom="30dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_switch_camera"
        android:textSize="18sp"
        android:textColor="#212121"
        android:padding="12dp"
        android:layout_marginTop="10dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_switch_location"
        android:textSize="18sp"
        android:textColor="#212121"
        android:padding="12dp"
        android:layout_marginTop="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_language"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#311B92"
        android:layout_marginBottom="12dp"/>

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="English"
            android:textSize="16sp"
            android:textColor="#212121"
            android:padding="12dp"/>

        <RadioButton
            android:id="@+id/rbHindi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="हिंदी"
            android:textSize="16sp"
            android:textColor="#212121"
            android:padding="12dp"/>

    </RadioGroup>

</LinearLayout>